Leer entrada -> Leer mas

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,8 @@
     <meta name="description"
         content="Nuestro objetivo es proveer a los aficionados y expertos en el café una plataforma en línea para aprender todo lo relacionado con el café">
     <link rel="icon" type="image/svg" href="/build/img/icon.svg">
+<meta name="theme-color" content="#784D3C">
+
     <!-- Fuentes: Open Sans y PT Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,7 +86,7 @@
                         contaminación del agua y la emisión de gases de efecto invernadero.</p>
                     <div>
                         <!-- CAMBIAR A LA RUTA CON EL NOMBRE DEL ARCHIVO QUE VALLAS A CREAR -->
-                        <a href="/blog/1IndustriaCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/1IndustriaCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
                 <li class="blog__post">
@@ -99,7 +101,7 @@
                         es importante tener en cuenta que trabajar con máquinas tostadoras de café conlleva ciertos
                         riesgos y peligros que deben abordarse de manera adecuada.</p>
                     <div>
-                        <a href="/blog/2PeligroDelTostado.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/2PeligroDelTostado.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
             </ul>
@@ -121,7 +123,7 @@
                         chocolate o los que buscan una experiencia más intensa, estas recetas ofrecen opciones
                         versátiles y deliciosas para disfrutar de esta apreciada bebida.</p>
                     <div>
-                        <a href="/blog/3RecetasDeCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/3RecetasDeCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
                 <li class="blog__post">
@@ -135,7 +137,7 @@
                         y detrás de esta industria se encuentran algunas empresas famosas que se dedican a la producción
                         y comercialización de café de alta calidad.</p>
                     <div>
-                        <a href="/blog/4EmpresasCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/4EmpresasCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
             </ul>
@@ -156,7 +158,7 @@
                     <p class="blog__extracto">Más allá de su sabor y aroma atractivos, el café contiene compuestos
                         bioactivos que pueden tener efectos positivos en nuestro organismo. </p>
                     <div>
-                        <a href="/blog/5BeneficiosCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/5BeneficiosCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
                 <li class="blog__post">
@@ -169,7 +171,7 @@
                     <p class="blog__extracto">Aunque el café tiene una serie de beneficios para la salud cuando se
                         consume moderadamente, su consumo excesivo puede tener efectos negativos en el organismo. </p>
                     <div>
-                        <a href="/blog/6DanosCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/6DanosCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
             </ul>
@@ -190,7 +192,7 @@
                     <p class="blog__extracto">El café, la bebida deliciosa que disfrutamos hoy, tiene una historia
                         interesante y orígenes que se remontan a cientos de años.</p>
                     <div>
-                        <a href="/blog/7HistoriaDelCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/7HistoriaDelCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
                 <li class="blog__post">
@@ -204,7 +206,7 @@
                     <p class="blog__extracto">Los principales productores de café en el mundo, una lista de los mas
                         respetados. </p>
                     <div>
-                        <a href="/blog/8PaisesCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/8PaisesCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
             </ul>
@@ -225,7 +227,7 @@
                     <p class="blog__extracto">México es uno de los principales productores de café del mundo y cuenta
                         con diversas regiones cafetaleras que se destacan por la calidad y sabor de su café.</p>
                     <div>
-                        <a href="/blog/9IndustriaMexicoCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/9IndustriaMexicoCafe.html" class="blog__boton--negro">Leer más</a>
                     </div>
                 </li>
                 <li class="blog__post">
