--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description"
         content="Nuestro objetivo es proveer a los aficionados y expertos en el café una plataforma en línea para aprender todo lo relacionado con el café">
     <link rel="icon" type="image/svg" href="/build/img/icon.svg">
+<meta name="theme-color" content="#784D3C">
+    
     <!-- Fuentes: Open Sans y PT Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -142,7 +144,7 @@
                 <h2 class="blog__titulo">La industria del café en México</h2>
                 <p class="blog__extracto">El país ha sido un productor importante desde la época colonial. Hoy en día, México es uno de los principales productores de café en el mundo, con una producción anual de alrededor de 4.5 millones de sacos de café.</p>
                 <div>
-                    <a href="/blog/10PrincipalesProductoresMexicoCafe.html" class="blog__boton--negro">Leer entrada</a>
+                    <a href="/blog/10PrincipalesProductoresMexicoCafe.html" class="blog__boton--negro">Leer más</a>
                 </div>
             </li>
              <li class="blog__post">
@@ -154,7 +156,7 @@
                 <h2 class="blog__titulo">Una breve clase de historia, origenes del café</h2>
                 <p class="blog__extracto">El café, la bebida deliciosa que disfrutamos hoy, tiene una historia interesante y orígenes que se remontan a cientos de años.</p>
                 <div>
-                    <a href="/blog/7HistoriaDelCafe.html" class="blog__boton--negro">Leer entrada</a>
+                    <a href="/blog/7HistoriaDelCafe.html" class="blog__boton--negro">Leer más</a>
                 </div>
             </li>
         </ul>
