--- a/nosotros.html
+++ b/nosotros.html
@@ -111,6 +111,8 @@
                 <img src="/build/img/twitter.svg" alt="Boton twitter" title="Twitter">
             </a>
         </div>
+        <br>
+        <a href="http://sergioluna.me" target="_blank" rel="noopener noreferrer" class="footer__heading">Sitio web desarrollado por <b>Sergio Luna</b></a>
     </footer>
 
     <!-- JS -->
