--- a/blog.html
+++ b/blog.html
@@ -259,14 +259,15 @@
             <a href="https://www.facebook.com/profile.php?id=100092684496308" target="_blank" rel="noopener noreferrer">
                 <img src="/build/img/facebook.svg" alt="Boton facebook" title="Facebook">
             </a>
-            <a href="https://www.youtube.com/channel/UCTCCYtzfrXkR-4xOAq1j-kw" target="_blank"
-                rel="noopener noreferrer">
+            <a href="https://www.youtube.com/channel/UCTCCYtzfrXkR-4xOAq1j-kw" target="_blank" rel="noopener noreferrer">
                 <img src="/build/img/youtube.svg" alt="Boton youtube" title="Youtube">
             </a>
             <a href="https://twitter.com/BlogDeCafeTwt" target="_blank" rel="noopener noreferrer">
                 <img src="/build/img/twitter.svg" alt="Boton twitter" title="Twitter">
             </a>
         </div>
+        <br>
+        <a href="http://sergioluna.me" target="_blank" rel="noopener noreferrer" class="footer__heading">Sitio web desarrollado por <b>Sergio Luna</b></a>
     </footer>
 
     <!-- JS - AOS -->
