--- a/suscribete.html
+++ b/suscribete.html
@@ -100,6 +100,8 @@
                 <img src="/build/img/twitter.svg" alt="Boton twitter" title="Twitter">
             </a>
         </div>
+        <br>
+        <a href="http://sergioluna.me" target="_blank" rel="noopener noreferrer" class="footer__heading">Sitio web desarrollado por <b>Sergio Luna</b></a>
     </footer>
 
     <!-- JS -->
